aligned the arrow correctly

--- a/css/main.scss
+++ b/css/main.scss
@@ -531,7 +531,7 @@
       color: {{ site.data.colors.markers-color }};
       font-size: 3.5em;
       position: absolute;
-      right: 3vw;
+      right: 4vw;
       bottom: 1vw;
     }
     .post-title {
